--- a/stylesheet.css
+++ b/stylesheet.css
@@ -12,7 +12,7 @@ body {
 	display: none;
 }
 .peach {
-	background-color: #FFDAB9;
+	background-color: #bffa7b;
 	
 }
 .peach-after {
@@ -25,90 +25,90 @@ body {
 
 @-webkit-keyframes peach_alive {
 	0%{
-		background-color: #FFDAB9;
+		background-color: #bffa7b;
 	}
 	25%{
-		background-color: #FFE4B5;
+		background-color: #9cf863;
 	}
 	50%{
-		background-color: #FFDAB9;
+		background-color: #bffa7b;
 	}
 	75%{
-		background-color: #FFEFD5;
+		background-color: #a4f870;
 	}
 	100%{
-		background-color: #FFDAB9;
+		background-color: #bffa7b;
 	}
 }
 @-moz-keyframes peach_alive {
 	0%{
-		background-color: #FFDAB9;
+		background-color: #bffa7b;
 	}
 	25%{
 		background-color: #FFE4B5;
 	}
 	50%{
-		background-color: #FFDAB9;
+		background-color: #bffa7b;
 	}
 	75%{
-		background-color: #FFEFD5;
+		background-color: #a4f870;
 	}
 	100%{
-		background-color: #FFDAB9;
+		background-color: #bffa7b;
 	}
 }
 
 @-o-keyframes peach_alive {
 	0%{
-		background-color: #FFDAB9;
+		background-color: #bffa7b;
 	}
 	25%{
 		background-color: #FFE4B5;
 	}
 	50%{
-		background-color: #FFDAB9;
+		background-color: #bffa7b;
 	}
 	75%{
-		background-color: #FFEFD5;
+		background-color: #a4f870;
 	}
 	100%{
-		background-color: #FFDAB9;
+		background-color: #bffa7b;
 	}
 }
 
 @-ms-keyframes peach_alive {
 	0%{
-		background-color: #FFDAB9;
+		background-color: #bffa7b;
 	}
 	25%{
 		background-color: #FFE4B5;
 	}
 	50%{
-		background-color: #FFDAB9;
+		background-color: #bffa7b;
 	}
 	75%{
-		background-color: #FFEFD5;
+		background-color: #a4f870;
 	}
 	100%{
-		background-color: #FFDAB9;
+		background-color: #bffa7b;
 	}
 }
 
 @keyframes peach_alive {
 	0%{
-		background-color: #FFDAB9;
+		background-color: #bffa7b;
 	}
 	25%{
 		background-color: #FFE4B5;
 	}
 	50%{
-		background-color: #FFDAB9;
+		background-color: #bffa7b;
 	}
 	75%{
-		background-color: #FFEFD5;
+		background-color: #a4f870;
 	}
 	100%{
-		background-color: #FFDAB9;
+		background-color: #bffa7b;
 	}
 }
 
