--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1273,9 +1273,8 @@ audio {
 }
 .message p {
 	font-family: 'Signika', sans-serif;
-	font-size: 30px;
-	text-transform: uppercase;
-	color: #C4515C;
+	font-size: 35px;
+	color: #130103;
 	text-shadow: 2px 2px 2px #FFF;
 	display: none;
 	font-weight: bold;
